<resources>
    <string name="app_name">ToDoApp</string>
    <string name="newDeal">Новое</string>
    <string name="doneCount">Выполненно - %d</string>
    <string name="myDeals">Мои дела</string>
    <string name="toDoUntil">Сделать до</string>
    <string name="priority">Важность</string>
    <string name="no">Нет</string>
    <string name="lowPriority">Низкий</string>
    <string name="highPriority">!!!Высокий</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="ok">Ок</string>
    <string name="cancel">Закрыть</string>
    <string name="chooseDate">Выберите дату</string>
    <string name="markIsDone">Отметить выполненным</string>
    <string name="markIsNotDone">Снять отметку о выполнении</string>
    <string name="enterTheText">Введите текст</string>
    <string name="saveError">Ошибка сохранения</string>
    <string name="deleteError">Ошибка удаления</string>
    <string name="updateError">Ошибка изменения</string>
    <string name="loadError">Ошибка загрузки данных</string>
    <string name="authorizationError">Ошибка авторизации</string>
    <string name="authorizationSuccess">Авторизация прошла успешно</string>
    <string name="authorizationReset">Авторизация сброшена</string>
    <string name="getToken">Получить токен</string>
    <string name="resetToken">Сбросить токен</string>
    <string name="token">Токен</string>
</resources>